tests/programs/fail/hallo_world.vi

use std::io::{
  println,
  println,
  print_ln,
};

fn main(std::io) {
  io.println(hallo, world)
}
